[gd_scene load_steps=48 format=3 uid="uid://b72s2ywpxk7mo"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_sx357"]
[ext_resource type="Texture2D" uid="uid://yuhxtcnualgx" path="res://art/pc_death_sprite.png" id="2_am8ak"]
[ext_resource type="Texture2D" uid="uid://o7xbo04gm48l" path="res://art/pc_attacks_sprite.png" id="2_p52q2"]
[ext_resource type="Texture2D" uid="uid://br4yrj5xsoklq" path="res://art/player_character_sprite.png" id="2_x0hr1"]
[ext_resource type="Texture2D" uid="uid://bujcn2x5i521i" path="res://art/pc_sprite.png" id="3_3a6qw"]
[ext_resource type="Texture2D" uid="uid://3gqop5bw8q8g" path="res://ui/Rectangle 2.svg" id="4_gdt7x"]
[ext_resource type="Texture2D" uid="uid://bhax4jk6yephl" path="res://ui/Group 6 (1).svg" id="5_kdr5a"]
[ext_resource type="Texture2D" uid="uid://c6we02bu75xam" path="res://ui/level.png" id="6_42vuf"]
[ext_resource type="Texture2D" uid="uid://b800vj58cq2rd" path="res://ui/Rectangle 3.svg" id="6_xpubv"]
[ext_resource type="Texture2D" uid="uid://conavj77m8ea6" path="res://ui/Group 4.svg" id="7_evgda"]
[ext_resource type="Texture2D" uid="uid://drkxp5wtef2e7" path="res://ui/Group 1.svg" id="8_mr68m"]
[ext_resource type="AudioStream" uid="uid://q5wnjy2hhccq" path="res://assets/audio/sfx/Ugh.wav" id="12_mqj6h"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hsahm"]
radius = 34.0
height = 68.0

[sub_resource type="AtlasTexture" id="AtlasTexture_otlya"]
atlas = ExtResource("2_p52q2")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_iac1l"]
atlas = ExtResource("2_p52q2")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ku5q"]
atlas = ExtResource("2_p52q2")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8dbyo"]
atlas = ExtResource("2_p52q2")
region = Rect2(0, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwdo7"]
atlas = ExtResource("2_p52q2")
region = Rect2(128, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_60yye"]
atlas = ExtResource("2_p52q2")
region = Rect2(256, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_atn47"]
atlas = ExtResource("2_p52q2")
region = Rect2(0, 260, 128, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_dncst"]
atlas = ExtResource("2_p52q2")
region = Rect2(128, 260, 128, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_80a5v"]
atlas = ExtResource("2_p52q2")
region = Rect2(256, 260, 128, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gpyk"]
atlas = ExtResource("2_p52q2")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8qg5"]
atlas = ExtResource("2_p52q2")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gywrc"]
atlas = ExtResource("2_p52q2")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pddgg"]
atlas = ExtResource("3_3a6qw")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1uj2m"]
atlas = ExtResource("3_3a6qw")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_iac4m"]
atlas = ExtResource("3_3a6qw")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygwjm"]
atlas = ExtResource("3_3a6qw")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_peeih"]
atlas = ExtResource("2_am8ak")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_266hd"]
atlas = ExtResource("2_am8ak")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5mgg"]
atlas = ExtResource("2_am8ak")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8bui"]
atlas = ExtResource("2_am8ak")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3y3e"]
atlas = ExtResource("2_x0hr1")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2wxw"]
atlas = ExtResource("2_x0hr1")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq6kl"]
atlas = ExtResource("2_x0hr1")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xem2"]
atlas = ExtResource("2_x0hr1")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8qsx"]
atlas = ExtResource("2_x0hr1")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixd7y"]
atlas = ExtResource("2_x0hr1")
region = Rect2(128, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_noxvx"]
atlas = ExtResource("2_x0hr1")
region = Rect2(256, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibo3s"]
atlas = ExtResource("2_x0hr1")
region = Rect2(384, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qew2"]
atlas = ExtResource("2_x0hr1")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu2ih"]
atlas = ExtResource("2_x0hr1")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yykub"]
atlas = ExtResource("2_x0hr1")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_70bl2"]
atlas = ExtResource("2_x0hr1")
region = Rect2(384, 128, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_b5ay7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_otlya")
}, {
"duration": 2.5,
"texture": SubResource("AtlasTexture_iac1l")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_7ku5q")
}],
"loop": true,
"name": &"attack_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8dbyo")
}, {
"duration": 2.5,
"texture": SubResource("AtlasTexture_uwdo7")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_60yye")
}],
"loop": true,
"name": &"attack_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_atn47")
}, {
"duration": 2.5,
"texture": SubResource("AtlasTexture_dncst")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_80a5v")
}],
"loop": true,
"name": &"attack_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gpyk")
}, {
"duration": 2.5,
"texture": SubResource("AtlasTexture_o8qg5")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_gywrc")
}],
"loop": true,
"name": &"attack_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pddgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1uj2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iac4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygwjm")
}],
"loop": true,
"name": &"back_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_peeih")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_266hd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5mgg")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_x8bui")
}],
"loop": true,
"name": &"death_animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3y3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2wxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq6kl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xem2")
}],
"loop": true,
"name": &"front_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8qsx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixd7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_noxvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibo3s")
}],
"loop": true,
"name": &"left_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qew2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu2ih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yykub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70bl2")
}],
"loop": true,
"name": &"right_walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_oxbv0"]
radius = 167.122

[node name="player" type="CharacterBody2D"]
position = Vector2(444, 233)
collision_layer = 3
script = ExtResource("1_sx357")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(133, 82)
shape = SubResource("CapsuleShape2D_hsahm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(134, 81)
sprite_frames = SubResource("SpriteFrames_b5ay7")
animation = &"right_walk"

[node name="player_hitbox" type="Area2D" parent="."]
position = Vector2(128, 103)

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2(0.22699, -14.801)
shape = SubResource("CircleShape2D_oxbv0")

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 0.7

[node name="deal_attack_timer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(134.227, 90.199)

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="UI" type="Control" parent="Camera2D/CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 1.0
offset_right = 5.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Levelup" type="TextureButton" parent="Camera2D/CanvasLayer/UI"]
layout_mode = 1
offset_left = 7.0
offset_top = 6.0
offset_right = 108.0
offset_bottom = 106.0
scale = Vector2(1.51519, 1.51519)
texture_normal = ExtResource("6_42vuf")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/UI/Levelup"]
layout_mode = 0
offset_left = 40.919
offset_top = 36.2991
offset_right = 55.919
offset_bottom = 75.2991
theme_override_font_sizes/font_size = 26
text = "1
"

[node name="StatusMenu" type="VBoxContainer" parent="Camera2D/CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -392.0
offset_top = 11.0
offset_right = -13.0
offset_bottom = 155.0
grow_horizontal = 0

[node name="HealthBar" type="HBoxContainer" parent="Camera2D/CanvasLayer/UI/StatusMenu"]
layout_mode = 2
alignment = 2

[node name="HPBar" type="TextureProgressBar" parent="Camera2D/CanvasLayer/UI/StatusMenu/HealthBar"]
layout_mode = 2
texture_progress = ExtResource("4_gdt7x")

[node name="HPIcon" type="TextureRect" parent="Camera2D/CanvasLayer/UI/StatusMenu/HealthBar"]
layout_mode = 2
texture = ExtResource("5_kdr5a")
expand_mode = 2
stretch_mode = 4

[node name="XPBar" type="HBoxContainer" parent="Camera2D/CanvasLayer/UI/StatusMenu"]
layout_mode = 2
alignment = 2

[node name="XPBar" type="TextureProgressBar" parent="Camera2D/CanvasLayer/UI/StatusMenu/XPBar"]
layout_mode = 2
texture_progress = ExtResource("6_xpubv")

[node name="XPIcon" type="TextureRect" parent="Camera2D/CanvasLayer/UI/StatusMenu/XPBar"]
layout_mode = 2
texture = ExtResource("7_evgda")
expand_mode = 2

[node name="Gold" type="HBoxContainer" parent="Camera2D/CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -115.0
offset_right = 84.0
offset_bottom = 128.0
grow_horizontal = 2
scale = Vector2(1.1897, 1.1897)

[node name="GoldTexture" type="TextureRect" parent="Camera2D/CanvasLayer/UI/Gold"]
layout_mode = 2
texture = ExtResource("8_mr68m")
expand_mode = 2

[node name="GoldAmountLabel" type="RichTextLabel" parent="Camera2D/CanvasLayer/UI/Gold"]
layout_mode = 2
size_flags_vertical = 4
bbcode_enabled = true
text = "0"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="HealingCooldown" type="ProgressBar" parent="Camera2D"]
modulate = Color(1, 0, 0, 1)
offset_left = 438.773
offset_top = -233.199
offset_right = 564.773
offset_bottom = -206.199
max_value = 2.0
allow_lesser = true
show_percentage = false

[node name="DamageSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_mqj6h")

[node name="healing_cooldown" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
[connection signal="timeout" from="healing_cooldown" to="." method="_on_healing_cooldown_timeout"]
